--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-accelerate==0.33.0
-transformers==4.44.2
-sentencepiece==0.2.0
-numpy==1.26.4
+accelerate==0.34.2
+bitsandbytes==0.44.1
 opencv-python-headless==4.10.0.84
 pillow==10.4.0
 requests==2.32.3
+sentencepiece==0.2.0
 tqdm==4.66.5
+transformers==4.45.1
